--- a/Project4/README
+++ b/Project4/README
@@ -1,1 +1,21 @@
+The course: “CSC173”
+2. The assignment or project “Project 4”
+3. Zhenhao Zhang zzh133@u.rochester.edu
+4. The names and email addresses of any collaborators (per the course policy on collaboration)
+   none
+5. Instructions for building your project (with the required compiler options)
+    I write the makefile for this project, so you can just type 'make' in the terminal to build the project. The output is written to 'Proj4.out'.
+6. Instructions for running your project
+   First open the terminal, and cd to the directory where the project is located.
+   Then type the following command:
+   - make
+   - ./Proj4.out
+   - Then answer the questions that are prompted.
+   - Enter 'stop' to quit the app
+
+   or you can type the following command:
+   - make run
+   - Enter 'stop' to quit the app
+
+
 
